# ba-points

./: .gitignore  main.py  pyproject.toml
ba_points/config/: vars.py
ba_points/src/: api_scraper.py  calculator.py  src.py  web_scraper.py
data/: api_prices.csv  prices_tier_points.csv  prices_tier_points_sorted.csv  tier_points.csv  web_prices.csv
