[tool.poetry]
name = "ba-points"
version = "0.1.0"
description = ""
authors = ["VitaminB16 <artemiy.nosov@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
selenium = "^4.23.1"
pandas = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
